# d11-boot-api/src/main/resources/openapi/d11-boot-openapi-v1.0.yaml
@@ -769,6 +769,78 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/Unexpected'
+  /player-season-stats/team/{teamId}/season/{seasonId}:
+    get:
+      summary: Find player season stats by team id and season id.
+      operationId: findPlayerSeasonStatByTeamIdAndSeasonId
+      tags:
+        - playerSeasonStat
+      parameters:
+        - name: teamId
+          in: path
+          required: true
+          description: Id for the team that player season stats will be found for.
+          schema:
+            type: integer
+            format: int64
+        - name: seasonId
+          in: path
+          required: true
+          description: Id for the season that player season stats will be found for.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/PlayerSeasonStat"
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/Unexpected'
+  /player-season-stats/d11-team/{d11TeamId}/season/{seasonId}:
+    get:
+      summary: Find player season stats by D11 team id and season id.
+      operationId: findPlayerSeasonStatByD11TeamIdAndSeasonId
+      tags:
+        - playerSeasonStat
+      parameters:
+        - name: d11TeamId
+          in: path
+          required: true
+          description: Id for the D11 team that player season stats will be found for.
+          schema:
+            type: integer
+            format: int64
+        - name: seasonId
+          in: path
+          required: true
+          description: Id for the season that player season stats will be found for.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/PlayerSeasonStat"
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/Unexpected'
   /team-match-week-stats/{teamMatchWeekStatId}:
     get:
       summary: Find a team match week stat by id.
